# ground_segment

src/csf/: CMakeLists.txt  main.cpp  mycsf.cpp  package.xml
src/csf/include/: mycsf.h  params.cfg
src/csf/launch/: csf.launch
src/plane_fit_ground_filter/: CMakeLists.txt
src/plane_fit_ground_filter/launch/: plane_ground_filter.launch
